# genetics-results-api

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_server.py
.beads/: issues.jsonl  metadata.json
app/: dependencies.py  middleware.py  middleware_usage_logging.py  server.py
app/config/: chromatin_peaks.py  coloc.py  common.py  config.dev.finngen.py  config.prod.finngen.py  config.prod.public.py  config.py  credible_sets.py  datasets.py  exome_results.py  expression.py  gene_based_results.py  gene_disease.py  genes.py  mpra.py  open_chromatin.py  profile.py  sort_keys.py  summary_stats.py  variant_effect.py  yaml_loader.py
app/core/: auth.py  cache.py  datatypes.py  exceptions.py  file_utils.py  gcs_retry.py  logging_config.py  responses.py  service_container.py  singleton.py  streams.py  variant.py
app/routers/: __init__.py  auth.py  chromatin_peaks.py  colocalization.py  credible_sets.py  datasets.py  exome_results.py  expression.py  gene_based.py  gene_disease.py  gene_groups.py  genes.py  (+11 more)
docs/: project-spec.md
scripts/: convert_rsid_to_tabix.sh  test_perf.sh
tests/: conftest.py  run_tests.sh  test_chromatin_peaks.py  test_coding_filter.py  test_colocalization.py  test_credible_sets.py  test_dataset_display_names.py  test_exome_results.py  test_expression.py  test_gene_based.py  test_gene_disease.py  test_gene_group_service.py  test_gene_groups.py  test_gene_groups_endpoint.py  test_gene_normalize_endpoint.py  test_genes.py  test_health.py  test_metadata.py  test_metadata_harmonization.py  test_rsid.py  test_search.py  test_search_credible_sets_flag.py  test_summary_stats.py  test_sumstats_column_alignment.py  test_variant_annotation.py  test_variant_set.py
(+71 files in other folders)
