[project]
name = "genetics-results-api"
version = "0.1.0"
description = "API to fetch human genetics association results and annotations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.15",
    "asyncstdlib==3.13.1",
    "fastapi==0.116.1",
    "gcloud-aio-storage==9.5.0",
    "gcsfs==2025.9.0",
    "google-api-python-client==2.179.0",
    "google-cloud-storage==3.3.0",
    "itsdangerous==2.2.0",
    "polars==1.32.3",
    "PyJWT==2.10.1",
    "rapidfuzz==3.14.3",
    "rauth==0.7.3",
    "requests==2.32.4",
    "typing-extensions==4.14.1",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-xdist==3.8.0",
    "ruff==0.8.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -rw"
