[project]
name = "genetics-results-api"
version = "0.1.0"
description = "API to fetch human genetics association results and annotations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.5",
    "asyncstdlib==3.14.0",
    "fastapi==0.136.1",
    "gcloud-aio-storage==9.6.4",
    "gcsfs==2026.4.0",
    "google-api-python-client==2.195.0",
    "google-cloud-logging==3.15.0",
    "google-cloud-storage==3.10.1",
    "polars==1.40.1",
    "PyJWT==2.12.1",
    "PyYAML>=6.0",
    "rapidfuzz==3.14.5",
    "requests==2.33.1",
    "typing-extensions==4.15.0",
    "uvicorn==0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-xdist==3.8.0",
    "ruff==0.8.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -rw"
